# auto_nav

./: .gitignore  README.md  install.sh
src/auto_nav_controller/: package.xml  setup.cfg  setup.py
src/auto_nav_controller/auto_nav_controller/: move_robot.py
src/auto_nav_gazebo/: CMakeLists.txt  package.xml
src/auto_nav_gazebo/launch/: gazebo.launch.py
src/auto_nav_gazebo/worlds/: my_college_world.world
src/auto_nav_gazebo/worlds/Untitled/: model.sdf
src/auto_nav_launch/: package.xml  setup.cfg  setup.py
src/auto_nav_map_server/: package.xml  setup.cfg  setup.py
src/auto_nav_nav_client/: package.xml  setup.cfg  setup.py
src/auto_nav_nav_client/auto_nav_nav_client/: nav_client.py
src/auto_nav_speech/: package.xml  setup.cfg  setup.py
src/auto_nav_world/: package.xml  setup.cfg  setup.py
