<?xml version="1.0"?>
<package format="3">
  <name>auto_nav_gazebo</name>
  <version>0.0.1</version>
  <description>Gazebo simulation for auto_nav project.</description>
  <maintainer email="ganeshrejeti1@gmail.com">saiganesh</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>ros2launch</exec_depend>
<exec_depend>gazebo_ros</exec_depend>
<exec_depend>turtlebot3_description</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
